Fixed header sizing on small screens

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -23,6 +23,13 @@ app {
 
   z-index: 999;
 
+
+  .top-bar-left,
+  .top-bar-right {
+    flex: 0 1 auto;
+    margin-left: auto;
+  }
+
   .top-bar-left {
     margin: 0;
   }
